# jscompiler_renameProperty-const-repro

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  example-element.js  main.js  package-lock.json  package.json
